--- a/i18n/en-US.json
+++ b/i18n/en-US.json
@@ -12,6 +12,7 @@
   "Reach_End": "Reach End",
   "Advanced": "Advanced",
   "Language": "Language",
+  "FollowSystem": "System",
   "OpenEH": "Open in EHentai",
   "About": {
     "": "About",
