--- a/i18n/zh-CN.json
+++ b/i18n/zh-CN.json
@@ -12,6 +12,7 @@
   "Reach_End": "到底了",
   "Advanced": "高级设置",
   "Language": "语言",
+  "FollowSystem": "跟随系统",
   "OpenEH": "在 Ehentai 中打开",
   "About": {
     "": "关于",
