feat: 优化图片显示

--- a/i18n/en-US.json
+++ b/i18n/en-US.json
@@ -3,7 +3,10 @@
   "Watched": "Watched",
   "Popular": "Popular",
   "Favorites": "Favorites",
-  "Histories": "Histories",
+  "Histories": {
+    "": "Histories",
+    "MaxLength": "Histories Max Length"
+  },
   "Setting": "Setting",
   "Copy": "Copy",
   "Copyied": "Copyied",
