--- a/i18n/zh-CN.json
+++ b/i18n/zh-CN.json
@@ -3,7 +3,10 @@
   "Watched": "订阅",
   "Popular": "热门",
   "Favorites": "收藏",
-  "Histories": "历史",
+  "Histories": {
+    "": "历史",
+    "MaxLength": "历史记录容量"
+  },
   "Setting": "设置",
   "Copy": "复制",
   "Copyied": "已复制",
