fix: 修复e-hentai.org的小图读取错误

--- a/i18n/en-US.json
+++ b/i18n/en-US.json
@@ -24,7 +24,7 @@
     "Source": "Source",
     "License": "License",
     "Version": "Version",
-    "EhentaiViewDesc": "EhentaiView is not affiliated with E-hentai.org in any way"
+    "FHentaiDesc": "FHentai is not affiliated with E-hentai.org in any way"
   },
   "Theme": {
     "": "Theme",
