--- a/i18n/zh-CN.json
+++ b/i18n/zh-CN.json
@@ -24,7 +24,7 @@
     "Source": "源代码",
     "License": "开源证书",
     "Version": "版本",
-    "EhentaiViewDesc": "EhentaiView 是 E-hentai.org 的非官方项目"
+    "FHentaiDesc": "FHentai 是 E-hentai.org 的非官方项目"
   },
   "Theme": {
     "": "主题",
