--- a/i18n/en-US.json
+++ b/i18n/en-US.json
@@ -33,6 +33,7 @@
   },
   "Sign_In": {
     "": "Sign In",
+    "need": "Need Sign In",
     "welcome": "Welcome FHentai",
     "Email": "Email",
     "Cookie": "Use Cookie",
